--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 ---
 layout: default
 ---
-index
 <ul>
     {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}">{{ post.title }}</a>
-        {{ post.excerpt }}
-      </li>
+    <li>
+        <a href="{{ post.url }}">{{ post.excerpt }}</a>
+    </li>
     {% endfor %}
-  </ul>
+</ul>
