--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 <ul>
     {% for post in site.posts %}
     <li>
-        <a href="{{ post.url }}">{{ post.excerpt }}</a>
+        <a href="{{ post.url }}">{{post.title}}</a>
+        {{ post.excerpt }}
     </li>
     {% endfor %}
 </ul>
